# arrecs

./: .gitmodules  CMakeLists.txt  arrecs.h
src/application/: Application.cpp  Application.h  IWindow.h  Time.cpp  Time.h
src/scenes/: Scene.cpp  Scene.h
src/services/: ILoadableService.h  ILocatableService.h  IUpdatableService.h  ServiceLocator.h  ServicesHandler.cpp  ServicesHandler.h
src/systems/: EventSystem.h  IEarlyUpdatableSystem.h  IEventPublisherSystem.h  IEventSubscriberSystem.h  IFinalUpdatableSystem.h  IFixedUpdatableSystem.h  ILateUpdatableSystem.h  ILoadableSystem.h  ILocateServicesSystem.h  IRenderableSystem.h  IUpdatableSystem.h  IWindowInjectableSystem.h  SystemsHandler.cpp  SystemsHandler.h
